ingress/default-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-ingress
  namespace: default
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /apple
          pathType: Prefix
          backend:
            service:
              name: apple-service
              port:
                number: 1561
        - path: /banana
          pathType: Prefix
          backend:
            service:
              name: banana-service
              port:
                number: 1561
        - path: /guestbook
          pathType: Prefix
          backend:
            service:
              name: kustomize-guestbook-ui
              port:
                number: 5678
